--- a/style/style.scss
+++ b/style/style.scss
@@ -1,4 +1,5 @@
 @import "hamburgers";
+@import "gallery";
 $titleBgColour: linear-gradient(0deg, rgba(0, 0, 0, 0.5) 0%, rgba(0, 0, 0, 1) 100%);
 $headerPadding: 90px;
 $titleSize: 40px;
@@ -225,11 +226,13 @@ embed {
 }
 
 #home {
+    // centre horizontally & vertically
     position: absolute;
     left: 50%;
     top: 50%;
     -webkit-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
+
     margin: 0;
     position: fixed;
     background: none;
@@ -356,8 +359,6 @@ embed {
     padding: 40px;
     background: rgba(255, 255, 255, 0.5);
     margin: 10px 0px 10px;
-    color: white;
-
 }
 
 .feedbackThumbnail {
