--- a/style/style.scss
+++ b/style/style.scss
@@ -347,6 +347,8 @@ embed {
     color: white;
 }
 
+#feedbackExpandButton{position: relative; left: 40px;}
+
 .contentPlaceholder {
     // padding: 1px 2padding: 40px;0px 20px;
     // display: inline-flex;
