dev and ux content update

--- a/style/style.css
+++ b/style/style.css
@@ -1695,6 +1695,7 @@ embed {
 }
 
 .contentPlaceholder {
+  overflow: auto;
   padding: 40px;
   background: rgba(255, 255, 255, 0.5);
   margin: 10px 0px 10px;
