--- a/style/style.scss
+++ b/style/style.scss
@@ -356,7 +356,7 @@ embed {
     // flex-direction: row;
     // flex-wrap: wrap;
     // align-content: center;
-
+    overflow: auto;
 
     padding: 40px;
     background: rgba(255, 255, 255, 0.5);
