--- a/style/style.css
+++ b/style/style.css
@@ -1625,7 +1625,7 @@ embed {
   -webkit-transition: 3s;
   transition: 3s;
   margin: 0px 90px 0px 90px;
-  padding: 4vw 5vw 4vw 5vw;
+  padding: 4vw 7vw;
   background: blue;
   -webkit-box-shadow: 0px 0px 30px blue;
           box-shadow: 0px 0px 30px blue;
@@ -1643,11 +1643,11 @@ embed {
 
 #content {
   margin: 0px 90px 0px 90px;
-  padding: 4vw 5vw 4vw 5vw;
+  padding: 4vw 7vw;
   -webkit-animation: fadein 2s;
   animation: fadein 2s;
-  -webkit-box-shadow: 0px 0px 30px black;
-          box-shadow: 0px 0px 30px black;
+  -webkit-box-shadow: 0px 20px 30px black;
+          box-shadow: 0px 20px 30px black;
   background: rgba(255, 255, 255, 0.75);
   color: black;
   -webkit-transition: 2s;
@@ -1662,7 +1662,7 @@ embed {
   -webkit-transition: 2s;
   transition: 2s;
   margin: 0px 90px 0px 90px;
-  padding: 4vw 5vw 4vw 5vw;
+  padding: 4vw 7vw;
   background: rgba(0, 0, 0, 0.75);
   -webkit-box-shadow: 0px 0px 30px black;
           box-shadow: 0px 0px 30px black;
@@ -1675,11 +1675,16 @@ embed {
   -webkit-transition: 1.5s;
   transition: 1.5s;
   margin: 0px 90px 0px 90px;
-  padding: 4vw 5vw 4vw 5vw;
   background: rgba(150, 150, 150, 0.75);
   -webkit-box-shadow: 0px 0px 30px black;
           box-shadow: 0px 0px 30px black;
   color: white;
+}
+
+#dividerText {
+  text-align: center;
+  font-size: 40px;
+  padding-top: 25px;
 }
 
 .feedback {
