content update and minor styling improv

--- a/style/style.scss
+++ b/style/style.scss
@@ -6,7 +6,7 @@ $titleSize: 40px;
 // $titleSize: 8vw;
 $headerHeight: 68px;
 $varWidth: 14vw;
-$contentPadding: 4vw 7vw;
+$contentPadding: 4vw 7vw 8vw;
 
 @-webkit-keyframes AnimationName {
     0% {
