--- a/style/style.css
+++ b/style/style.css
@@ -1625,7 +1625,7 @@ embed {
   -webkit-transition: 3s;
   transition: 3s;
   margin: 0px 90px 0px 90px;
-  padding: 4vw 7vw;
+  padding: 4vw 7vw 8vw;
   background: blue;
   -webkit-box-shadow: 0px 0px 30px blue;
           box-shadow: 0px 0px 30px blue;
@@ -1643,7 +1643,7 @@ embed {
 
 #content {
   margin: 0px 90px 0px 90px;
-  padding: 4vw 7vw;
+  padding: 4vw 7vw 8vw;
   -webkit-animation: fadein 2s;
   animation: fadein 2s;
   -webkit-box-shadow: 0px 20px 30px black;
@@ -1662,7 +1662,7 @@ embed {
   -webkit-transition: 2s;
   transition: 2s;
   margin: 0px 90px 0px 90px;
-  padding: 4vw 7vw;
+  padding: 4vw 7vw 8vw;
   background: rgba(0, 0, 0, 0.75);
   -webkit-box-shadow: 0px 0px 30px black;
           box-shadow: 0px 0px 30px black;
