--- a/style/style.scss
+++ b/style/style.scss
@@ -391,6 +391,8 @@ embed {
     // right: 50%;
     // margin-left: -50vw;
     // margin-right: -50vw;
+    
+    width: 300%;
     max-width: 100%;
     height: auto;
 }
