--- a/style/style.scss
+++ b/style/style.scss
@@ -373,6 +373,12 @@ embed {
     margin: 10px 0px 10px;
 }
 
+.contentPlaceholderHidden {
+    display: flex;
+    justify-content: center;
+    padding: 5px 25px;
+}
+
 .feedbackThumbnail {
     height: 40px;
     width: 40px;
