--- a/style/style.css
+++ b/style/style.css
@@ -1641,6 +1641,34 @@ embed {
   font-size: 1px;
 }
 
+.btn {
+  font-family: inherit;
+  font-size: inherit;
+  background: none;
+  cursor: pointer;
+  padding: 10px 10px;
+  outline: none;
+  border-radius: 50px;
+  border: 2px solid #000;
+  color: #000;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+}
+
+.btn a {
+  text-decoration: none;
+}
+
+.btn:hover,
+.btn:active {
+  color: #fff;
+  background: #000;
+}
+
+button:focus {
+  outline: 0;
+}
+
 #content {
   margin: 0px 90px 0px 90px;
   padding: 4vw 7vw 8vw;
