--- a/style/style.scss
+++ b/style/style.scss
@@ -268,6 +268,36 @@ embed {
     font-size: 1px;
 }
 
+.btn{
+    font-family: inherit;
+    font-size: inherit;
+    background: none;
+    cursor: pointer;
+    padding: 10px 10px;
+    // margin: 15px 30px;
+    // text-transform: uppercase;
+    // letter-spacing: 1.2px;
+    // font-weight: 700;
+    outline: none;
+    border-radius: 50px;
+    border: 2px solid #000;
+    color: #000;
+    transition: all 0.3s;
+}
+
+.btn a {
+	text-decoration: none;
+}
+.btn:hover,
+.btn:active {
+	color: #fff;
+	background: #000;
+}
+
+button:focus {
+    outline:0;
+}
+
 #content {
     // height: 200px;
     // width:150px;
