--- a/style/style.css
+++ b/style/style.css
@@ -1655,12 +1655,28 @@ embed {
   transition: all 0.3s;
 }
 
+.btnContrast {
+  font-family: inherit;
+  font-size: inherit;
+  background: none;
+  cursor: pointer;
+  padding: 10px 10px;
+  outline: none;
+  border-radius: 50px;
+  border: 2px solid #fff;
+  color: #fff;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+}
+
 .btn a {
   text-decoration: none;
 }
 
 .btn:hover,
-.btn:active {
+.btn:active,
+.btnContrast:hover,
+.btnContrast:active {
   color: #fff;
   background: #000;
 }
@@ -1731,7 +1747,7 @@ button:focus {
   overflow: auto;
   padding: 40px;
   background: rgba(255, 255, 255, 0.5);
-  margin: 10px 0px 10px;
+  margin: 25px 0px;
 }
 
 .contentPlaceholderHidden {
