--- a/style/style.scss
+++ b/style/style.scss
@@ -285,11 +285,31 @@ embed {
     transition: all 0.3s;
 }
 
+.btnContrast{
+    font-family: inherit;
+    font-size: inherit;
+    background: none;
+    cursor: pointer;
+    padding: 10px 10px;
+    // margin: 15px 30px;
+    // text-transform: uppercase;
+    // letter-spacing: 1.2px;
+    // font-weight: 700;
+    outline: none;
+    border-radius: 50px;
+    border: 2px solid #fff;
+    color: #fff;
+    transition: all 0.3s;
+}
+
 .btn a {
 	text-decoration: none;
 }
+
 .btn:hover,
-.btn:active {
+.btn:active,
+.btnContrast:hover,
+.btnContrast:active {
 	color: #fff;
 	background: #000;
 }
@@ -400,7 +420,7 @@ button:focus {
 
     padding: 40px;
     background: rgba(255, 255, 255, 0.5);
-    margin: 10px 0px 10px;
+    margin: 25px 0px;
 }
 
 .contentPlaceholderHidden {
