--- a/style/style.css
+++ b/style/style.css
@@ -1705,12 +1705,16 @@ button:focus {
   animation: fadein 1s;
   -webkit-transition: 2s;
   transition: 2s;
-  margin: 0px 90px 0px 90px;
+  margin: 0px 90px;
   padding: 4vw 7vw 8vw;
   background: rgba(0, 0, 0, 0.75);
   -webkit-box-shadow: 0px 0px 30px black;
           box-shadow: 0px 0px 30px black;
   color: white;
+}
+
+#aboutMe {
+  margin: 0px 4vw 7vw 8vw 40px 4vw 7vw 8vw;
 }
 
 .contentDivider {
@@ -1890,6 +1894,7 @@ footer {
   #content,
   #learningOutcome,
   #title,
+  #aboutMe,
   .contentDivider,
   .titleText {
     margin: 0px;
