--- a/style/style.scss
+++ b/style/style.scss
@@ -566,7 +566,7 @@ footer {
 /* Style page content - use this if you want to push the page content to the right when you open the side navigation */
 #main {
     transition: margin-left .5s;
-    /* padding: 20px; */
+    // padding: 20px;
 }
 
 // Fit content to smaller screens
