--- a/style/style.css
+++ b/style/style.css
@@ -1467,6 +1467,59 @@
   }
 }
 
+@-webkit-keyframes pulse {
+  from {
+    background-color: #fff;
+    -webkit-box-shadow: 0 0 9px #00f;
+  }
+  50% {
+    background-color: #fff;
+    -webkit-box-shadow: 0 0 18px #fff;
+  }
+  to {
+    background-color: #fff;
+    -webkit-box-shadow: 0 0 9px #00f;
+  }
+}
+
+@-webkit-keyframes glowing {
+  0% {
+    -webkit-box-shadow: 0 0 -10px #fff;
+            box-shadow: 0 0 -10px #fff;
+  }
+  40% {
+    -webkit-box-shadow: 0 0 20px #fff;
+            box-shadow: 0 0 20px #fff;
+  }
+  60% {
+    -webkit-box-shadow: 0 0 20px #fff;
+            box-shadow: 0 0 20px #fff;
+  }
+  100% {
+    -webkit-box-shadow: 0 0 -10px #fff;
+            box-shadow: 0 0 -10px #fff;
+  }
+}
+
+@keyframes glowing {
+  0% {
+    -webkit-box-shadow: 0 0 -10px #fff;
+            box-shadow: 0 0 -10px #fff;
+  }
+  40% {
+    -webkit-box-shadow: 0 0 20px #fff;
+            box-shadow: 0 0 20px #fff;
+  }
+  60% {
+    -webkit-box-shadow: 0 0 20px #fff;
+            box-shadow: 0 0 20px #fff;
+  }
+  100% {
+    -webkit-box-shadow: 0 0 -10px #fff;
+            box-shadow: 0 0 -10px #fff;
+  }
+}
+
 @keyframes AnimationName {
   0% {
     background-position: 88% 0%;
@@ -1518,35 +1571,7 @@
 }
 
 /* Firefox < 16 *//* Safari, Chrome and Opera > 12.1 */
-@-webkit-keyframes fadeintoright {}/* Internet Explorer *//* Opera < 12.1 */@-webkit-keyframes glowing {
-  0% {
-    color: rgba(255, 255, 255, 0.5);
-  }
-  40% {
-    color: white;
-  }
-  60% {
-    color: white;
-  }
-  100% {
-    color: rgba(255, 255, 255, 0.5);
-  }
-}@keyframes glowing {
-  0% {
-    color: rgba(255, 255, 255, 0.5);
-  }
-  40% {
-    color: white;
-  }
-  60% {
-    color: white;
-  }
-  100% {
-    color: rgba(255, 255, 255, 0.5);
-  }
-}
-
-html {
+@-webkit-keyframes fadeintoright {}/* Internet Explorer *//* Opera < 12.1 */html {
   scroll-behavior: smooth;
   -ms-overflow-style: -ms-autohiding-scrollbar;
   scrollbar-width: none;
@@ -1619,20 +1644,6 @@ embed {
           box-shadow: none;
 }
 
-#about {
-  position: absolute;
-  left: 75%;
-  top: 75%;
-  -webkit-transform: translate(-75%, -75%);
-  transform: translate(-75%, -75%);
-  margin: 0;
-  position: fixed;
-  background: none;
-  color: white;
-  -webkit-box-shadow: none;
-          box-shadow: none;
-}
-
 #title {
   -webkit-animation: fadein 1s;
   animation: fadein 1s;
@@ -1668,6 +1679,21 @@ embed {
   transition: all 0.3s;
 }
 
+.btn-glow {
+  font-family: inherit;
+  font-size: inherit;
+  background: none;
+  cursor: pointer;
+  padding: 10px 10px;
+  outline: none;
+  border-radius: 50px;
+  border: 2px solid #000;
+  color: #000;
+  -webkit-animation-name: pulse;
+  -webkit-animation-duration: 2s;
+  -webkit-animation-iteration-count: infinite;
+}
+
 .btnContrast {
   font-family: inherit;
   font-size: inherit;
@@ -1689,7 +1715,10 @@ embed {
 .btn:hover,
 .btn:active,
 .btnContrast:hover,
-.btnContrast:active {
+.btnContrast:active,
+.btn-glow,
+.btn-glow:active,
+.btn-glow:hover {
   color: #000;
   background: #fff;
   border-color: #fff;
