--- a/style/style.css
+++ b/style/style.css
@@ -1470,7 +1470,7 @@
 @-webkit-keyframes pulse {
   from {
     background-color: #fff;
-    -webkit-box-shadow: 0 0 9px #00f;
+    -webkit-box-shadow: 0 0 9px none;
   }
   50% {
     background-color: #fff;
@@ -1478,7 +1478,7 @@
   }
   to {
     background-color: #fff;
-    -webkit-box-shadow: 0 0 9px #00f;
+    -webkit-box-shadow: 0 0 9px none;
   }
 }
 
@@ -1582,7 +1582,7 @@
 }
 
 /* iframe as background */
-.visualiframe {
+#visualiframe {
   z-index: -9999;
   top: 0;
   left: 0;
@@ -1670,7 +1670,7 @@ embed {
   font-size: inherit;
   background: none;
   cursor: pointer;
-  padding: 10px 10px;
+  padding: 10px;
   outline: none;
   border-radius: 50px;
   border: 2px solid #000;
@@ -1684,7 +1684,7 @@ embed {
   font-size: inherit;
   background: none;
   cursor: pointer;
-  padding: 10px 10px;
+  padding: inherit;
   outline: none;
   border-radius: 50px;
   border: 2px solid #000;
