--- a/style/style.scss
+++ b/style/style.scss
@@ -53,7 +53,7 @@ $contentPadding: 4vw 7vw 8vw;
 @-webkit-keyframes pulse {
     from {
         background-color: #fff;
-        -webkit-box-shadow: 0 0 9px #00f;
+        -webkit-box-shadow: 0 0 9px none;
     }
 
     50% {
@@ -63,7 +63,7 @@ $contentPadding: 4vw 7vw 8vw;
 
     to {
         background-color: #fff;
-        -webkit-box-shadow: 0 0 9px #00f;
+        -webkit-box-shadow: 0 0 9px none;
     }
 }
 
@@ -181,24 +181,6 @@ $contentPadding: 4vw 7vw 8vw;
 /* Opera < 12.1 */
 @-o-keyframes fadeintoright {}
 
-// @keyframes glowing {
-//     0% {
-//         color: rgba(255, 255, 255, 0.5)
-//     }
-
-//     40% {
-//         color: rgba(255, 255, 255, 1);
-//     }
-
-//     60% {
-//         color: rgba(255, 255, 255, 1);
-//     }
-
-//     100% {
-//         color: rgba(255, 255, 255, 0.5);
-//     }
-// }
-
 // ________________________________________________________________________________________________________________________
 
 html {
@@ -213,7 +195,7 @@ html {
 }
 
 /* iframe as background */
-.visualiframe {
+#visualiframe {
     z-index: -9999;
     top: 0;
     left: 0;
@@ -310,7 +292,7 @@ embed {
     font-size: inherit;
     background: none;
     cursor: pointer;
-    padding: 10px 10px;
+    padding: 10px;
     // margin: 15px 30px;
     // text-transform: uppercase;
     // letter-spacing: 1.2px;
@@ -327,7 +309,7 @@ embed {
     font-size: inherit;
     background: none;
     cursor: pointer;
-    padding: 10px 10px;
+    padding: inherit;
     // margin: 15px 30px;
     // text-transform: uppercase;
     // letter-spacing: 1.2px;
